
[TestYamlProcessor - 1]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx:1.14.2
          name: nginx
          ports:
            - containerPort: 80

---

[TestYamlProcessorEdit - 1]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 777
  selector:
    matchLabels:
      app: edited
  template:
    metadata:
      labels:
        app: edited
    spec:
      containers:
        - image: nginx:1.14.2
          name: nginx
          ports:
            - containerPort: 80

---

[TestYamlKeyTree - 1]
${USERNAME}:
  backend_roles:
    - admin
  description: Demo admin user
  hash: ${PASSWORD | bcrypt}

---

[TestYamlKeyTreeEdit - 1]
${USERNAME}:
  description: Demo admin user
  frontend_roles:
    - admin
  hash: ${PASSWORD | bcrypt}

---
